Finished adding container classes

--- a/ImpactMap/Views/Entities/Details.cshtml
+++ b/ImpactMap/Views/Entities/Details.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Details";
 }
 
+<div class="container">
 <h2>Details</h2>
 
 <div>
@@ -88,3 +89,5 @@
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
+    </div>
