--- a/ImpactMap/Views/Reports/Delete.cshtml
+++ b/ImpactMap/Views/Reports/Delete.cshtml
@@ -4,53 +4,57 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<div class="container">
+    <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Report</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.project_ID)
-        </dt>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Report</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.project_ID)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.project_ID)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.project_ID)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.completed)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.completed)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.completed)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.completed)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.reportText)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.reportText)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.reportText)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.reportText)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.dueDate)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.dueDate)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.dueDate)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.dueDate)
+            </dd>
 
-    </dl>
+        </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
-</div>
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
+
+    </div>
